remove google play link

--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,8 @@
     </style>
   </head>
   <body>
-    <div
-      class="container"
-      onclick="location.href"
-      ="https://play.google.com/store/apps/details?id=qrscanner.qrcode.barcode.reader.qrcodegenerator"
-    >
-      <img src="resource/picture/web.png" />
+    <div class="container" onclick="location.href=''">
+      <img src="/resource/picture/web.png" />
     </div>
   </body>
 </html>
