update privacy policy and terms of use

--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -5,25 +5,34 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="This Privacy Policy applies beginning May 7, 2020. You may change your consent
-    anytime in our App Settings. Chatbot AI (or " we")="" collects="" information="" from="" you="" in="" order="" to=""
-    provide="" better="" service="" and="" give="" a="" user="" experience.="" we="" always="" put="" your="" privacy=""
-    as="" the="" first="" consideration="" policy="" explains="" how="" collect,="" use,="" protect="" information."="">
-    <title>Chatbot AI Labs Privacy Policy</title>
+    <meta name="description" content='This Privacy Policy applies beginning May 7, 2020. You may change your consent
+    anytime in our App Settings. ChatAI (or "we") collects information from you in order to
+    provide better service and give a user experience. we always put your privacy
+    as the first consideration policy explains how collect, use, protect information.'>
+    <title>ChatAI Privacy Policy</title>
+    <style>
+    html,
+    body {
+        margin: 0;
+    }
+    body{
+        padding: 0px 16px;
+    }
+  </style>
   </head>
   <body>
-    <h1>Chatbot AI Labs Privacy Policy</h1>
+    <h1>ChatAI Privacy Policy</h1>
 
     <p>
       This Privacy Policy applies beginning July 7, 2020. You may change your consent anytime in our App Settings.
-      Chatbot AI (or "we") collects information from you in order to provide better service and give you a better user
+      ChatAI (or "we") collects information from you in order to provide better service and give you a better user
       experience. We always put your privacy as the first consideration and Privacy Policy explains how we collect, use,
       and protect your information.
     </p>
 
     <h3>1. Data controller and representative</h3>
     <p>
-      Chatbot AI Labs, and its subsidiaries* ("Chatbot AI" or "we", or "our" or "us"), cares about the privacy of your
+      ChatAI, and its subsidiaries* ("ChatAI" or "we", or "our" or "us"), cares about the privacy of your
       personal information and is committed to protecting it. We may have to collect your personal data to provide you
       with the best weapons and the most up-to-date security. We do not take your trust for granted. We conform our data
       use to the European Union’s ("EU") General Data Protection Regulation ("GDPR"), with effect from 7 May 2020.
@@ -39,7 +48,7 @@
     </p>
     <ul>
       <li>
-        information you make available to us when you open a Chatbot AI account or use another service
+        information you make available to us when you open a ChatAI account or use another service
         (Twitter，Facebook), such as your name, telephone number, email address;
       </li>
 
@@ -50,7 +59,7 @@
 
       <li>
         information you make available to us and/or public via your use of Application and/or another service which you
-        use to open your Chatbot AI account;
+        use to open your ChatAI account;
       </li>
 
       <li>information made available by another user about you via their use of Application;</li>
@@ -118,7 +127,7 @@
     <ul>
       <li>
         Provide Application and Services (and the features within Application) to you, such as to show to other users in
-        Chatbot AI such as your connected friends or other users on the platform;
+        ChatAI such as your connected friends or other users on the platform;
       </li>
       <li>Provide you with advertising and direct marketing that is more relevant to you;</li>
       <li>
@@ -279,9 +288,9 @@
     </p>
     <h3>10. Children's Information</h3>
     <p>
-      Chatbot AI does not knowingly collect any personal identification information from children under the age of 13
+      ChatAI does not knowingly collect any personal identification information from children under the age of 13
       (or such legally required age of consent for Juveniles as defined under applicable laws) or knowingly allow such
-      person to register on Chatbot AI. In the event that we are notified that we have collect personal information from
+      person to register on ChatAI. In the event that we are notified that we have collect personal information from
       a child under the age of 13 (or such legally required age of consent for Juveniles as defined under applicable
       laws) without parental consent, we will suspend the account and delete relevant information as quickly as
       possible. If you believe that we might have any information from a child under 13(or such legally required age of
